fixed qtv2 quan tri tt dang nhap, added .gitignore

--- a/QuanLyBenXeWebApp/Views/Account/Login.cshtml
+++ b/QuanLyBenXeWebApp/Views/Account/Login.cshtml
@@ -12,8 +12,7 @@
 			<div class="col-xl-6 col-lg-6">
 				<div class="d-flex" style="justify-content:center; align-items:center; width:100%; height:100%;">
 					<div>
-						<h3 class="login-title" style="font-family: 'Michroma', sans-serif; text-transform:uppercase; padding:0 0;">TEAMSE 12</h3><br />
-						<img src="../public/assets/img/logobus.png" />
+						<h3 class="login-title" style="font-family: 'Michroma', sans-serif; text-transform:uppercase; padding:0 0;"><i class="fas fa-bus" style="font-size:30px !important; color:#f36820"></i> TEAMSE 12</h3>
 					</div>
 				</div>
 			</div>
@@ -47,13 +46,15 @@
 			</div>
 		</div>
 	</div>
+	<div class="border-between">
+
+	</div>
 	<div class="login-footer">
 		<div class="container">
 			<div class="row">
 				<span class="col-xl-12 col-md-12 col-sm-12 col-lg-12 col-12 text-center">©2020 by TeamSE12</span>
 			</div>
 		</div>
-
 	</div>
 </div>
 @section Scripts {
