--- a/QuanLyBenXeWebApp/Views/QTV0/TtDangNhap.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV0/TtDangNhap.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Chỉnh sửa thông tin đăng nhập</h1>
 
-<div class="container">
+<div class="" style="display:inline-table;">
 	<form method="post">
 		<div class="text-danger validation-summary"></div>
 		<div class="input-group">
