--- a/QuanLyBenXeWebApp/Views/QTV2/TtDangNhap.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV2/TtDangNhap.cshtml
@@ -6,7 +6,7 @@
 
 <h1>@ViewData["Title"]</h1>
 <div class="container">
-	<form asp-action="ttdangnhap" method="post">
+	<form asp-action="updatettdangnhap" method="post">
 		<h3>Cập nhật thông tin cơ bản</h3>
 		<table>
 			<tr>
