--- a/QuanLyBenXeWebApp/Views/Home/Index.cshtml
+++ b/QuanLyBenXeWebApp/Views/Home/Index.cshtml
@@ -59,7 +59,7 @@
                             </div>
                             <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
                                 <div class="input-group">
-                                    <label for="quantity" class="label">Khoang t/g:</label>
+                                    <label for="quantity" class="label">Khoang T/G</label>
                                     <input id="input-interval" type="number" class="form-control mx-auto my-auto" name="quantity" min="1" max="48" step="0.5">
                                 </div>
                             </div>
@@ -80,7 +80,7 @@
                             </div>
                             <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-6">
                                 <div class="input-group">
-                                    <label for="quantity" class="label">Giá Vé:</label>
+                                    <label for="quantity" class="label">Giá Vé</label>
                                     <input id="input-cost" type="number" class="form-control mx-auto my-auto" name="quantity" min="50000" max="500000" step="50000">
                                 </div>
                             </div>
