--- a/QuanLyBenXeWebApp/Views/QTV0/TtBenXe.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV0/TtBenXe.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>@ViewData["Title"]</h1>
-<div class="container">
+<div class="">
 	<div class="input-group">
 		<table id="data-grid" class="table-bordered">
 			<thead>
