chinh sua chuc nang tim kiem chuyen di cua ktc

--- a/QuanLyBenXeWebApp/Views/Home/NhaXe.cshtml
+++ b/QuanLyBenXeWebApp/Views/Home/NhaXe.cshtml
@@ -7,10 +7,10 @@
 	<div class="view-container">
 		<div class="row">
 			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-				<h4>@Model.MaNhaXe</h4>
+				<h4>Thông tin nhà xe @Model.TenNhaXe</h4>
 			</div>
 			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-				<h6>@Model.TenNhaXe</h6>
+				<h6>Mã nhà xe: @Model.MaNhaXe</h6>
 			</div>
 			<div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6"><span style="font-size: 13px;">Số lượng xe: @Model.SoLuongXe</span></div>
 			<div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6"><span style="font-size: 13px;">Màu biểu tượng: <span class="color-square" style="background-color: @Model.MauBieuTuong"></span></span></div>
