--- a/QuanLyBenXeWebApp/Views/Home/Index.cshtml
+++ b/QuanLyBenXeWebApp/Views/Home/Index.cshtml
@@ -40,7 +40,7 @@
                     <div class=" col-12 col-sm-12 col-md-12 col-lg-4 col-xl-4">
                         <div class="input-group">
                             <span class="label">Ngày</span>
-                            <input id="input-date" class="form-control mx-auto my-auto" type="date" required>
+                            <input id="input-date" class="form-control mx-auto my-auto" type="date" value="@DateTime.Now.ToString("yyyy-MM-dd")" required>
                         </div>
                     </div>
                     <div class="nangcao col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12" id="toogle">
