added sorting function for all views

--- a/QuanLyBenXeWebApp/Views/QTV0/LsGiaoDich.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV0/LsGiaoDich.cshtml
@@ -37,6 +37,8 @@
 		<div class="input-group">
 			<button type="button" id="create-lsgd">Tạo mới</button>
 			<button type="button" id="delete-lsgd">Xoá</button>
+			<select id="sort-options"></select>
+			<button type="button" id="sort-button">Sắp xếp</button>
 		</div>
 		<datalist id="ma-nha-xe">
 			@foreach (NhaXe nx in ViewBag.MaNhaXes)
