--- a/QuanLyBenXeWebApp/Views/QTV0/LsVaoRa.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV0/LsVaoRa.cshtml
@@ -52,6 +52,8 @@
 		</div>
 		<div class="input-group">
 			<button type="button" id="delete-lsvr">Xoá</button>
+			<select id="sort-options"></select>
+			<button type="button" id="sort-button">Sắp xếp</button>
 		</div>
 	</form>
 </div>
