--- a/QuanLyBenXeWebApp/Views/QTV0/NhaXe.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV0/NhaXe.cshtml
@@ -51,6 +51,8 @@
 			<button type="button" id="create-nx">Tạo mới</button>
 			<button type="button" id="update-nx">Cập nhật</button>
 			<button type="button" id="delete-nx">Xoá</button>
+			<select id="sort-options"></select>
+			<button type="button" id="sort-button">Sắp xếp</button>
 		</div>
 	</form>
 </div>
