--- a/QuanLyBenXeWebApp/Views/QTV0/TtBenXe.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV0/TtBenXe.cshtml
@@ -30,5 +30,7 @@
 				}
 			</tbody>
 		</table>
+		<select id="sort-options"></select>
+		<button type="button" id="sort-button">Sắp xếp</button>
 	</div>
 </div>
