--- a/QuanLyBenXeWebApp/Views/QTV0/TtDangNhap.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV0/TtDangNhap.cshtml
@@ -74,6 +74,8 @@
 				<button type="button" id="update-ttdn">Cập nhật</button>
 				<button type="button" id="delete-ttdn">Xoá</button>
 				<button type="button" id="changepassword">Reset mật khẩu</button>
+				<select id="sort-options"></select>
+				<button type="button" id="sort-button">Sắp xếp</button>
 			</div>
 		</div>
 	</form>
