--- a/QuanLyBenXeWebApp/Views/QTV0/ViTriDo.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV0/ViTriDo.cshtml
@@ -35,6 +35,8 @@
 				<button type="button" id="create-vtd">Tạo mới</button>
 				<button type="button" id="update-vtd">Cập nhật mới</button>
 				<button type="button" id="delete-vtd">Xoá</button>
+				<select id="sort-options"></select>
+				<button type="button" id="sort-button">Sắp xếp</button>
 			</div>
 			<datalist id="ma-vi-tri">
 				<option>@("MB" + ViewBag.NextViTriId.Substring(2))</option>
