--- a/QuanLyBenXeWebApp/Views/QTV1/LsVaoRa.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV1/LsVaoRa.cshtml
@@ -43,9 +43,11 @@
                 </tbody>
             </table>
         </div>
-        <div class="input-group">
-            <button type="button" id="create-lsvr">Tạo mới</button>
-        </div>
+		<div class="input-group">
+			<button type="button" id="create-lsvr">Tạo mới</button>
+			<select id="sort-options"></select>
+			<button type="button" id="sort-button">Sắp xếp</button>
+		</div>
       
 </form>
 </div>
