--- a/QuanLyBenXeWebApp/Views/QTV1/TtBenXe.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV1/TtBenXe.cshtml
@@ -40,11 +40,13 @@
                 </tbody>
             </table>
         </div>
-        <div class="input-group">
-            <button type="button" id="create-ttbx">Tạo mới</button>
-            <button type="button" id="update-ttbx">Cập nhật</button>
-            <button type="button" id="delete-ttbx">Xóa</button>
-        </div>
+		<div class="input-group">
+			<button type="button" id="create-ttbx">Tạo mới</button>
+			<button type="button" id="update-ttbx">Cập nhật</button>
+			<button type="button" id="delete-ttbx">Xóa</button>
+			<select id="sort-options"></select>
+			<button type="button" id="sort-button">Sắp xếp</button>
+		</div>
     </form>
 </div>
 
