--- a/QuanLyBenXeWebApp/Views/QTV2/TaiXe.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV2/TaiXe.cshtml
@@ -43,5 +43,7 @@
 			<button type="button" id="create-tx">Tạo mới</button>
 			<button type="button" id="update-tx">Cập nhật mới</button>
 			<button type="button" id="delete-tx">Xoá</button>
+			<select id="sort-options"></select>
+			<button type="button" id="sort-button">Sắp xếp</button>
 		</div>
 </div>
