--- a/QuanLyBenXeWebApp/Views/QTV2/XeKhach.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV2/XeKhach.cshtml
@@ -54,6 +54,8 @@
 			<button type="button" id="create-xk">Tạo mới</button>
 			<button type="button" id="update-xk">Cập nhật mới</button>
 			<button type="button" id="delete-xk">Xoá</button>
+			<select id="sort-options"></select>
+			<button type="button" id="sort-button">Sắp xếp</button>
 		</div>
 	</form>
 </div>
