--- a/QuanLyBenXeWebApp/Views/Home/NhaXe.cshtml
+++ b/QuanLyBenXeWebApp/Views/Home/NhaXe.cshtml
@@ -4,18 +4,20 @@
 }
 
 <section>
-	<div class="view-container">
-		<div class="row">
-			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-				<h4>Thông tin nhà xe @Model.TenNhaXe</h4>
-			</div>
-			<div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
-				<h6>Mã nhà xe: @Model.MaNhaXe</h6>
-			</div>
-			<div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6"><span style="font-size: 13px;">Số lượng xe: @Model.SoLuongXe</span></div>
-			<div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6"><span style="font-size: 13px;">Màu biểu tượng: <span class="color-square" style="background-color: @Model.MauBieuTuong"></span></span></div>
-			<div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6"><span style="font-size: 13px;">Số điện thoại: @Model.Sdt</span></div>
-			<div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6"><span style="font-size: 13px;">Địa chỉ: @Model.DiaChi</span></div>
-		</div>
-	</div>
+    <div class="view-container p-3">
+        <div class="container">
+            <div class="row border-nx">
+                <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center">
+                    <h4>Thông tin nhà xe @Model.TenNhaXe</h4>
+                </div>
+                <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 text-center">
+                    <h6>Mã nhà xe: @Model.MaNhaXe</h6>
+                </div>
+                <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6"><span style="font-size: 15px;">Số lượng xe: @Model.SoLuongXe</span></div>
+                <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6"><span style="font-size: 15px;">Màu biểu tượng: <span class="color-square" style="background-color: @Model.MauBieuTuong"></span></span></div>
+                <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6"><span style="font-size: 15px;">Số điện thoại: @Model.Sdt</span></div>
+                <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6"><span style="font-size: 15px;">Địa chỉ: @Model.DiaChi</span></div>
+            </div>
+        </div>
+    </div>  
 </section>
