--- a/QuanLyBenXeWebApp/Views/QTV0/_Qtv0Layout.cshtml
+++ b/QuanLyBenXeWebApp/Views/QTV0/_Qtv0Layout.cshtml
@@ -27,27 +27,27 @@
 	<div class="wrapper d-flex align-items-stretch">
 		<nav id="sidebar">
 			<div class="p-4 pt-5">
-				<ul class="list-unstyled components mb-5">
-					<li class="active-item">
-						<a asp-controller="home" asp-action="index" class="text-capitalize">Trang Chủ</a>
+				<ul class="list-unstyled components mb-5 controls" id="myDIV">
+					<li class="active-item hoo" >
+						<a asp-controller="home" asp-action="index" class="text-capitalize" id="bullet-0">Trang Chủ</a>
 					</li>
-					<li>
-						<a asp-action="lsgiaodich" class="text-capitalize">Tạo, xem lịch sử giao dịch</a>
+					<li class="hoo">
+						<a asp-action="lsgiaodich" class="text-capitalize " id="bullet-1">Tạo, xem lịch sử giao dịch</a>
 					</li>
-					<li>
-						<a asp-action="ttdangnhap" class="text-capitalize">CRUD thông tin đăng nhập</a>
+					<li class="hoo">
+						<a asp-action="ttdangnhap" class="text-capitalize " id="bullet-2">CRUD thông tin đăng nhập</a>
 					</li>
-					<li>
-						<a asp-action="ttbenxe" class="text-capitalize">Xem trạng thái bến xe</a>
+					<li class="hoo">
+						<a asp-action="ttbenxe" class="text-capitalize " id="bullet-3">Xem trạng thái bến xe</a>
 					</li>
-					<li>
-						<a asp-action="lsvaora" class="text-capitalize">Xem, xoá lịch sử vào-ra</a>
+					<li class="hoo">
+						<a asp-action="lsvaora" class="text-capitalize " id="bullet-4">Xem, xoá lịch sử vào-ra</a>
 					</li>
-					<li>
-						<a asp-action="vitrido" class="text-capitalize">CRUD vị trí đỗ</a>
+					<li class="hoo">
+						<a asp-action="vitrido" class="text-capitalize " id="bullet-5">CRUD vị trí đỗ</a>
 					</li>
-					<li>
-						<a asp-action="nhaxe" class="text-capitalize">CRUD thông tin nhà xe</a>
+					<li class="hoo">
+						<a asp-action="nhaxe" class="text-capitalize " id="bullet-6">CRUD thông tin nhà xe</a>
 					</li>
 				</ul>
 
