--- a/QuanLyBenXeWebApp/Views/Shared/_Footer.cshtml
+++ b/QuanLyBenXeWebApp/Views/Shared/_Footer.cshtml
@@ -7,21 +7,21 @@
 		<div class="row">
 			<div class=" about-block col-12 col-sm-12 col-md-4 col-lg-4 col-xl-4">
 				<h3>
-					About us
+					Thông tin 
 				</h3>
 				<ul>
 					<li class=" contents-list">
-						<a href="">
-							<i class="fas fa-arrow-circle-right links"></i> Gioi thiệu bến xe trung tâm TP.Đà Nẵng
+						<a href="" class="text-white">
+							<i class="fas fa-arrow-circle-right links"></i> Giới thiệu bến xe trung tâm TP.Đà Nẵng
 						</a>
 					</li>
 					<li class=" contents-list">
-						<a href="">
+						<a href="" class="text-white">
 							<i class="fas fa-arrow-circle-right links"></i> Tuyển dụng
 						</a>
 					</li>
 					<li class=" contents-list">
-						<a href="">
+						<a href="" class="text-white">
 							<i class="fas fa-arrow-circle-right links"></i> Liên Hệ
 						</a>
 					</li>
@@ -33,17 +33,17 @@
 				</h3>
 				<ul class="">
 					<li class=" contents-list">
-						<a href="">
+						<a href="" class="text-white">
 							<i class="fas fa-arrow-circle-right links"></i> Hướng dẫn đăng kí
 						</a>
 					</li>
 					<li class=" contents-list">
-						<a href="">
+						<a href="" class="text-white">
 							<i class="fas fa-arrow-circle-right links"></i> Quy chế bến xe TTTP Đà Nẵng
 						</a>
 					</li>
 					<li class=" contents-list">
-						<a href="">
+						<a href="" class="text-white">
 							<i class="fas fa-arrow-circle-right links"></i> Liên Hệ
 						</a>
 					</li>
@@ -54,18 +54,18 @@
 					Kết nối với chúng tôi
 				</h3>
 				<ul class="mxh">
-					<li class="  contents-list">
-						<a href="">
+					<li class="  contents-list" >
+						<a href="" class="text-white">
 							<i class="fab fa-facebook-square  mxh-icon"></i>
 						</a>
 					</li>
 					<li class=" contents-list">
-						<a href="">
+						<a href="" class="text-white">
 							<i class="fab fa-instagram mxh-icon"></i>
 						</a>
 					</li>
 					<li class=" contents-list">
-						<a href="">
+						<a href="" class="text-white">
 							<i class="fab fa-twitter-square mxh-icon"></i>
 						</a>
 					</li>
