--- a/QuanLyBenXeWebApp/Views/Shared/_Layout.cshtml
+++ b/QuanLyBenXeWebApp/Views/Shared/_Layout.cshtml
@@ -1,116 +1,130 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>@ViewData["Title"] - Bến xe Đà Nẵng</title>
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
-		  integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
-		  crossorigin="anonymous">
-	<environment include="Development">
-		<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>@ViewData["Title"] - Bến xe Đà Nẵng</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+          integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
+          crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <environment include="Development">
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
 
-	</environment>
-	<environment exclude="Development">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-			  asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
-			  asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
-			  crossorigin="anonymous"
-			  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
-	</environment>
-	<environment include="Development">
-		<link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-	</environment>
+    </environment>
+    <environment exclude="Development">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+              asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+              asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
+              crossorigin="anonymous"
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
+    </environment>
+    <environment include="Development">
+        <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
+        <link rel="stylesheet" href="~/css/animate.css " asp-append-version="true"/>
+    </environment>
 </head>
 <body>
-	<header>
-		<nav id="navbar" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light box-shadow fixed-top mb-3">
-			<div class="container">
-				<a id="logo" class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"> <i class="fas fa-bus"></i> BẾN XE</a>
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-						aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse ml-auto">
-					@*<partial name="_LoginPartial" />*@
-					<ul class="navbar-nav ">
-						<li class="nav-item">
-							<a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Trang chủ</a>
-						</li>
-						<li class="nav-item dropdown">
-							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-								Nhà xe &nbsp;
-							</a>
-							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-								<a class="dropdown-item" href="#">Nhà xe Miền Bắc</a>
-								<a class="dropdown-item" href="#">Nhà xe Miền Trung</a>
-								<a class="dropdown-item" href="#">Nhà xe Miền Nam</a>
-								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#">Nhà xe porsche 911</a>
-							</div>
-						</li>
-						<li class="nav-item ml-3 mr-3">
-							<button type="button" class="btn btn-danger"><i class="fas fa-phone"></i> Hotline</button>
-						</li>
-						@{
-							if (User.Identity.IsAuthenticated)
-							{
-								<li class="nav-item">
-									<span>Hello <i>@User.Identity.Name.</i></span>
-								</li>
-								<li class="nav-item">
-									<form method="post" asp-controller="account" asp-action="logout">
-										<button type="submit">Đăng xuất.</button>
-									</form>
-								</li>
-							}
-							else
-							{
-								<li class="nav-item">
-									<a class="nav-link" asp-area="" asp-controller="account" asp-action="login">Đăng nhập</a>
-								</li>
-							}
-						}
-					</ul>
-				</div>
-			</div>
-		</nav>
-	</header>
-	@*<partial name="_CookieConsentPartial" />*@
-	<partial name="_ValidationScriptsPartial" />
-	<main role="main" class="pb-3">
-		@RenderBody()
-	</main>
+    <header>
+        <nav id="navbar" class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-light box-shadow fixed-top mb-3">
+            <div class="container">
+                <a id="logo" class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index" style="color:#0061C5"> <i class="fas fa-bus" style="color:#0061C5"></i> BẾN XE</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse ml-auto">
+                    @*<partial name="_LoginPartial" />*@
+                    <ul class="navbar-nav ">
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Trang chủ</a>
+                        </li>
+                        @*<li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Nhà xe &nbsp;
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <a class="dropdown-item" href="#">Nhà xe Miền Bắc</a>
+                                    <a class="dropdown-item" href="#">Nhà xe Miền Trung</a>
+                                    <a class="dropdown-item" href="#">Nhà xe Miền Nam</a>
+                                    <div class="dropdown-divider"></div>
+                                    <a class="dropdown-item" href="#">Nhà xe porsche 911</a>
+                                </div>
+                            </li>*@
+                        <li class="nav-item ml-3 mr-3">
+                            <button type="button" class="btn btn-danger"><i class="fas fa-phone"></i> Hotline</button>
+                        </li>
+                        @{
+                            if (User.Identity.IsAuthenticated)
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Hello <i>@User.Identity.Name.</i></a>
+                                </li>
+                                <li class="nav-item">
+                                    <form method="post" asp-controller="account" asp-action="logout">
+                                        <button type="submit" class="btn btn-primary">Đăng xuất.</button>
+                                    </form>
+                                </li>
+                            }
+                            else
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="" asp-controller="account" asp-action="login">Đăng nhập</a>
+                                </li>
+                            }
+                        }
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+    @*<partial name="_CookieConsentPartial" />*@
+    <partial name="_ValidationScriptsPartial" />
+    <main role="main">
+        @RenderBody()
+    </main>
 
-	<footer class="border-top footer text-muted">
-		<partial name="_Footer" />
-	</footer>
+    <footer class="border-top footer text-muted">
+        <partial name="_Footer" />
+    </footer>
 
-	<environment include="Development">
-		<script src="~/lib/jquery/dist/jquery.js"></script>
-		<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
-	</environment>
-	<environment exclude="Development">
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
-				asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
-				asp-fallback-test="window.jQuery"
-				crossorigin="anonymous"
-				integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=">
-		</script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
-				asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"
-				asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
-				crossorigin="anonymous"
-				integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o">
-		</script>
-	</environment>
-	<script src="~/js/site.js" asp-append-version="true"></script>
-	<script src="~/js/admin.js" asp-append-version="true"></script>
-	<script src="~/js/qtv0.js"></script>
-	<script src="~/js/qtv1.js"></script>
-	<script src="~/js/qtv2.js" asp-append-version="true"></script>
+    <environment include="Development">
+        <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.js"></script>
+    </environment>
+    <environment exclude="Development">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+                asp-fallback-src="~/lib/jquery/dist/jquery.min.js"
+                asp-fallback-test="window.jQuery"
+                crossorigin="anonymous"
+                integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=">
+        </script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
+                asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"
+                asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
+                crossorigin="anonymous"
+                integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o">
+        </script>
+    </environment>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/admin.js" asp-append-version="true"></script>
+    <script src="~/js/qtv0.js"></script>
+    <script src="~/js/qtv1.js"></script>
+    <script src="~/js/qtv2.js" asp-append-version="true"></script>
+    <script src="~/js/wow.min.js" asp-append-version="true"></script>
+    <script>
+        @*wow = new WOW(
+            {
+                animateClass: 'animated',
+                offset: 100,
+                callback: function (box) {
+                    console.log("WOW: animating <" + box.tagName.toLowerCase() + ">")
+                }
+            }
+        );*@
+        new WOW().init();
+    </script>
 
-
-	@RenderSection("Scripts", required: false)
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
